# parallels

cal_pi/: README.md  cal_pi.sln
cal_pi/cal_pi/: cal_pi.vcxproj  kernel.cu
cal_pi/cal_pi/x64/Debug/: kernel.cu1183307447.deps
cal_pi/cal_pi/x64/Debug/cal_pi.tlog/: cal_pi.lastbuildstate  cal_pi.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cal_pi/x64/Debug/: cal_pi.exp  cal_pi.ilk  cal_pi.lib
ysda-parallel-computing-master/: README.md
ysda-parallel-computing-master/Crawler/: Crawler.sln
ysda-parallel-computing-master/Crawler/Crawler/: CrawlHelpers.cs  Crawler.csproj  ICrawler.cs  Program.cs  WebCrawler.cs  WebCrawlerSync.cs
ysda-parallel-computing-master/Crawler/Crawler/Properties/: AssemblyInfo.cs
ysda-parallel-computing-master/Philosophers/: Philosophers.sln
ysda-parallel-computing-master/Philosophers/Philosophers/: Philosophers.vcxproj  Philosophers.vcxproj.filters  base_philosopher.h  blocking_philosopher.h  fork.h  main.cpp  philosopher.h
ysda-parallel-computing-master/kmeans/: CMakeLists.txt  test.cpp
ysda-parallel-computing-master/kmeans/data-gen/: data-gen.cpp  data-gen.h  main.cpp
ysda-parallel-computing-master/kmeans/kmeans/: kmeans.cpp  kmeans.h  main.cpp
ysda-parallel-computing-master/life/: CMakeLists.txt  consequent.c  main.c  makefile
ysda-parallel-computing-master/reports/: crawler.tex  kmeans.ipynb  life.ipynb  philosophers.tex
ysda-parallel-computing-master/twitter/: twitter.ipynb
